--- a/css/style.css
+++ b/css/style.css
@@ -30,14 +30,14 @@ html, body {
 
 .spacer1 {
   width: 100%;
-  height: 100;
+  height: 50px;
   display: block;
   clear: both;
 }
 
 .spacer2 {
   width: 100%;
-  height: 78px;
+  height: 75px;
   display: block;
   clear: both;
 }
@@ -138,7 +138,7 @@ html, body {
   display: inline-block;
 }
 
-.social-box .social-icons input {
+.social-box .social-icons input, .social-box-disabled .social-icons input{
   width: 50px;
   height: 50px;
   line-height: 40px;
@@ -153,8 +153,12 @@ html, body {
   transition: ease all 0.55s;
 }
 
+.social-box-disabled .social-icons input {
+  background:  rgb(116, 116, 128);
+}
+
 .social-box .social-icons input:hover {
-  background: rgb(66, 70, 73);
+  background: rgb(177, 210, 235);
 }
 
 #statsTitle {
@@ -171,4 +175,29 @@ html, body {
 #modeTitle {
   color: #888;
   font-weight: 900;
+}
+
+.buttonSmall {
+  background-color: rgba(51,153,255,1);
+  box-shadow: rgb(58 78 95 / 20%) 0 10px 16px, rgb(58 78 95 / 5%) 0 -5px 16px;
+  color: white;
+  display: inline-block;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  padding: 3px 15px;
+  margin-right: 2px;
+  margin-bottom: 1px;
+  margin-top: 1px;
+  font-size: 14px;
+  font-weight: 600;
+  transition: ease-in-out all .7s;
+  text-align: center;
+}
+
+.buttonSmall:active {
+  border: 1px solid white;
+}
+
+.buttonSmall:hover {
+  box-shadow: rgb(51 153 255 / 60%) 0 10px 16px, rgb(51 153 255 / 20%) 0 -5px 16px;
 }
