--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-/* global */
-
 html {
   scroll-behavior: smooth;
 }
@@ -171,4 +169,29 @@ html, body {
 #modeTitle {
   color: #888;
   font-weight: 900;
+}
+
+.buttonSmall {
+  background-color: rgba(51,153,255,1);
+  box-shadow: rgb(58 78 95 / 20%) 0 10px 16px, rgb(58 78 95 / 5%) 0 -5px 16px;
+  color: white;
+  display: inline-block;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  padding: 3px 15px;
+  margin-right: 2px;
+  margin-bottom: 1px;
+  margin-top: 1px;
+  font-size: 14px;
+  font-weight: 600;
+  transition: ease-in-out all .7s;
+  text-align: center;
+}
+
+.buttonSmall:active {
+  border: 1px solid white;
+}
+
+.buttonSmall:hover {
+  box-shadow: rgb(51 153 255 / 60%) 0 10px 16px, rgb(51 153 255 / 20%) 0 -5px 16px;
 }
