--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ html, body {
   padding-top: calc(1 * 100%); 
   background-size: cover;
   background-position: center;
+  transition: background 1s linear;
 }
 
 .social-box {
@@ -185,13 +186,10 @@ html, body {
   border: 1px solid transparent;
   border-radius: 5px;
   padding: 3px 15px;
-  margin-right: 2px;
-  margin-bottom: 1px;
-  margin-top: 1px;
+  margin: 5px 0 5px 15px;
   font-size: 14px;
   font-weight: 600;
   transition: ease-in-out all .7s;
-  text-align: center;
 }
 
 .buttonSmall:active {
@@ -200,4 +198,13 @@ html, body {
 
 .buttonSmall:hover {
   box-shadow: rgb(51 153 255 / 60%) 0 10px 16px, rgb(51 153 255 / 20%) 0 -5px 16px;
+}
+
+#modeButtonDiv {
+  width: 100%;
+  height: 40px;
+}
+
+#modeTitle {
+  padding-right: 15px;
 }
