--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,15 @@ html, body {
   border-radius: .25rem!important;
   box-shadow: rgb(58 78 95 / 20%) 0 10px 16px, rgb(58 78 95 / 5%) 0 -5px 16px;
   background-color: #fff;
+  margin-top: 15px;
+}
+
+.pic-frame-main {
+  padding: 10px;
+  border-radius: .25rem!important;
+  box-shadow: rgb(58 78 95 / 20%) 0 10px 16px, rgb(58 78 95 / 5%) 0 -5px 16px;
+  background-color: rgb(41, 160, 77);
+  margin-bottom: 15px;
 }
 
 .text-grey {
@@ -208,16 +217,59 @@ html, body {
   padding-right: 15px;
 }
 
-.card {
-  width: 50px;
-  height: 80px;
-  padding: 10px;
-  border: solid 1px #808080;
-  background-color: white;
+.player-frame, .dealer-frame {
+  min-height: 130px;
+}
+
+.card {  
   display: inline-block;
-  border-radius: 10px;
-  font-size: 10pt;
-  text-align: center;
-  margin: 3px;
-  border:solid 3px;
+  position: relative;
+  margin-right: 10px;
+  width: 85px;
+  height: 121px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+}
+
+.cardContent {
+  display: inline-block;
+  position: absolute;
+}
+
+.cardContent.topLeft {
+  top: 5px;
+  left: 5px;
+}
+
+.cardContent.downRight {
+  bottom: 5px;
+  right: 5px;
+  transform: rotate(180deg);
+}
+
+.cardSuit {
+  font-size: 45px;
+  position: absolute;
+  top: 50%;
+  left: 33%;
+  transform: translateY(-50%);
+}
+
+.spade, .club {
+  color: black;
+}
+
+.heart, .diamond {
+  color: red;
+}
+
+@keyframes fade-in {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+.scores {
+  font-weight: 900;
+  padding-bottom: 5px;
 }
