--- a/css/style.css
+++ b/css/style.css
@@ -271,3 +271,13 @@ html, body {
   font-weight: 900;
   padding-bottom: 5px;
 }
+
+#playerScore, #dealerScore {
+  min-height: 30px;
+  font-weight: 900;
+}
+
+.fixedWidth {
+  min-width: 665px!important;
+  max-width: 665px!important;
+}
