--- a/css/style.css
+++ b/css/style.css
@@ -281,3 +281,114 @@ html, body {
   min-width: 665px!important;
   max-width: 665px!important;
 }
+
+.framer {
+  padding: 10px;
+  border-radius: .25rem!important;
+  box-shadow: rgb(58 78 95 / 20%) 0 10px 16px, rgb(58 78 95 / 5%) 0 -5px 16px;
+  background-color: #fff;
+}
+
+.spacerx0 {
+  width: 100%;
+  height: 15px;
+  display: block;
+  clear: both;
+}
+
+.spacerx1 {
+  width: 100%;
+  height: 30px;
+  display: block;
+  clear: both;
+}
+
+.spacerx2 {
+  width: 100%;
+  height: 50px;
+  display: block;
+  clear: both;
+}
+
+.interface {
+  width: 600px;
+  height: 550px;
+}
+
+.timer, .question {
+  width: 250px;
+  height: 100px;
+  margin: 0 auto;
+  text-align: center;
+  }
+
+.timer>span, .question>span {
+  font-size: 15px;
+}
+
+.timer>p, .question>p {
+  padding-top: 6px;
+  font-size: 30px;
+  font-weight: bold;
+
+}
+
+.answer, .start {
+  margin: 0 auto;
+  text-align: center;
+}
+
+#answer {
+  width: 250px;
+  text-align: center;
+  font-size: 25px;
+  border-radius: .25rem!important;
+  border: 2px solid #aaaaaa;
+  outline-color: rgba(27, 80, 129, 0.333);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#answer:focus {
+  border-radius: .25rem!important;
+  border: 2px solid rgba(27, 80, 129, 0.333)!important;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#start {
+  width: 250px;
+  height: 60px;
+  border: 2px solid #aaaaaa;
+}
+
+.thisScore {
+  margin-left: 15px;
+}
+
+.highscore {
+  margin-right: 15px;
+}
+
+.settings {
+  width: 600px;
+  height: 60px;
+}
+
+.limiter {
+  margin-left: 20px;
+  accent-color: rgba(27, 80, 129, 0.333);
+}
+
+#limiterLabel {
+  margin-right: 20px;
+}
+
+.radioLabel {
+  margin: 0 auto;
+  margin-right: 30px;
+}
+
+input[type="checkbox"] {
+  accent-color: rgba(27, 80, 129, 0.333);
+}
